--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: pink;
+    color: #213547;
     background-color: #ffffff;
   }
   a:hover {
