--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  width: 100vw;
 }
-
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +38,28 @@
 
 .read-the-docs {
   color: #888;
+}
+.produto-item{
+  border: 1px solid #f0f0f0;
+  border-radius: 5px;
+  padding: 30px;
+  box-shadow: 0 0 10px #f0f0f0;
+}
+.produto-item>img{
+  height: auto;
+  width: 100%;
+}
+.container-produtos{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  margin: 0 auto;
+}
+.container-produtos h1{
+  font-size: 2em;
+}
+
+.imagem-previa-upload{
+  width: 300px;
+  height: auto;
 }
