--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,33 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+form{
+  display:flex;
+  flex-direction:column;
+  border: 1px solid #f0f0f0;
+  padding: 2em;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+form>div{
+  display:flex;
+  flex-direction:column;
+  align-items: flex-start;
+  margin-bottom: 1em;
+}
+form>div>input{
+  width: 100%;
+  padding: 0.5em;
+  box-sizing: border-box;
+  outline: none!important;
+  border-radius: 2px;
+  border: 1px solid #d0d0d0;
+}
+form>div>input:focus{
+  border: 1px solid #3740f9a5;
+}
+
+main{
+  width: 60vw;
+  margin: 0 auto;
+}
